# Compiler-IFJ

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Knuth-Morris.c  Makefile  README.md  blaba.c  bst.c  buildin.c  buildin.h  cmake_install.cmake  err.c  err.h  fake_skener.c  fake_skener.c~  fake_skener.h  func.c  garbage.c  garbage.h  grammar_rules.txt  grammar_rules.txt~  grammar_table_new.txt  grammar_table_new.txt~  ial-test.c  ial.c  ial.h  ifj  ifj.cbp  ifj.depend  ijf  interpret  main.c  over_program.cpp  parser.c  parser.h  precedence.c  precedence.h  rozdeleni  scanner  scanner.c  (+21 more)
Errors/: 1.cpp  10.cpp  12.cpp  13.cpp  14.cpp  15.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  invalid_value_inputs  invalid_value_inputs~  invalid_values_test.sh  other_error_test.sh  other_errors
Functionality/: 1.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  5.cpp  7.cpp  8.cpp  9.cpp  9.cpp~  Expected_results_11  Expected_results_11~  Expected_results_12  Expected_results_12~  Expected_results_14~  Expected_results_15~  Expected_results_16~  Expected_results_17  Expected_results_17~  Expected_results_7  Expected_results_8  Expected_results_9  Expected_results_9~  a.out  functionality_test.sh
SkenerTest/: expected_tokens.txt  input_scanner.txt  main.c  testSkener.sh
Test_script_IFJ/: test.sh
Test_script_IFJ/Errors/: 2.cpp  invalid_value_inputs  invalid_values_test.sh  other_error_test.sh
Test_script_IFJ/Functionality/: 1  1.cpp~  (+32 more)
garbage_colector/: CMakeLists.txt  garbage.c  garbage.h  main.c  stack.c  stack.h
stack/: Makefile  main.c  stack.c  stack.h
